resolves styling-jump on load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,7 @@ body {
     justify-content: flex-end;
     padding: 10px;
     height: 80vh;
+    width: 100%;
     border-radius: 12px;
     border: 1px solid rgb(0, 255, 0);
     overflow-y: hidden;
